<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#ff2432fa"
    card_view:cardCornerRadius="0dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/v1"
            android:layout_gravity="right">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#ffcdfffd">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idpersona"
        android:text="@string/id_usuario"
        android:textColor="#ff3963b0"
        android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID"
                android:id="@+id/id_persona"
                android:textColor="#ff000000"
                android:textSize="13sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="#ffcdfffd" />
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nombre"
                android:text="@string/nombre"
                android:textColor="#ff3963b0"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NOMBRE"
                android:id="@+id/nommbre_c"
                android:textColor="#ff000000"
                android:textSize="13sp"
                android:layout_below="@+id/id_persona"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="27dp"
            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellidos"
                android:textColor="#ff3963b0"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="APELLIDOS"
                android:id="@+id/apellidos_c"
                android:textColor="#ff000000"
                android:textSize="13sp"
                android:layout_alignTop="@+id/nommbre_c"
                android:layout_centerHorizontal="true" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo"
                android:textColor="#ff3963b0"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TIPO"
                android:id="@+id/tipo_c"
                android:textColor="#ff000000"
                android:textSize="13sp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="54dp"
            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nivel"
                android:textColor="#ff3963b0"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NIVEL"
                android:id="@+id/nivel_c"
                android:textColor="#ff000000"
                android:textSize="13sp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="66dp"
            android:orientation="horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechac"
            android:textColor="#ff3963b0"
            android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FECHA"
                android:id="@+id/fecha_c"
                android:textColor="#ff000000"
                android:textSize="13sp"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modulo"
            android:textColor="#ff3963b0"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MODULO"
            android:id="@+id/modulo_c"
            android:textColor="#ff000000"
            android:textSize="13sp"

            android:layout_below="@+id/fecha_c"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        </LinearLayout>

        </RelativeLayout>
</android.support.v7.widget.CardView>